--- a/index.html
+++ b/index.html
@@ -2823,129 +2823,10 @@ async function startLocationTracking() {
     }
 }
 
-// Função para animar o marcador com Tween.js (100% fluido)
-function animateMarkerToPosition(newPosition, duration = 1000) {
-    if (!userLocationMarker) return;
-
-    // Se é a primeira posição, não animar (ir direto)
-    if (markerCoords.lat === 0 && markerCoords.lng === 0) {
-        markerCoords.lat = newPosition.lat;
-        markerCoords.lng = newPosition.lng;
-
-        if (userLocationMarker.position !== undefined) {
-            userLocationMarker.position = newPosition;
-        } else if (userLocationMarker.setPosition) {
-            userLocationMarker.setPosition(newPosition);
-        }
-        return;
-    }
-
-    // Parar animação anterior se existir
-    if (currentTween) {
-        currentTween.stop();
-    }
-
-    // Criar nova animação com Tween.js
-    currentTween = new TWEEN.Tween(markerCoords)
-        .to({ lat: newPosition.lat, lng: newPosition.lng }, duration)
-        .easing(TWEEN.Easing.Quadratic.Out) // Suavização quadrática (desaceleração suave)
-        .onUpdate(() => {
-            // Atualiza a posição do marcador em cada frame
-            try {
-                const interpolatedPosition = { lat: markerCoords.lat, lng: markerCoords.lng };
-
-                if (userLocationMarker.position !== undefined) {
-                    userLocationMarker.position = interpolatedPosition;
-                } else if (userLocationMarker.setPosition) {
-                    userLocationMarker.setPosition(interpolatedPosition);
-                }
-
-                // Movimento suave da câmera removido para não travar gestos do usuário
-                // O map.panTo() a 60 FPS causava conflito com drag/pinch do touchscreen
-            } catch (error) {
-                console.error('Erro ao atualizar posição do marcador:', error);
-            }
-        })
-        .onComplete(() => {
-            currentTween = null; // Limpar referência quando concluir
-        })
-        .start();
-}
-
-function updateUserLocation(position) {
-    // Throttle: atualizar apenas a cada X milissegundos (performance)
-    const now = Date.now();
-    if (now - lastPositionUpdate < updateThrottle) {
-        return; // Ignora updates muito frequentes
-    }
-    lastPositionUpdate = now;
-
-    const accuracy = position.coords.accuracy;
-
-    // FILTRO 1: Rejeitar leituras muito imprecisas (> 50m)
-    if (accuracy > 50) {
-        console.warn(`GPS impreciso (${Math.round(accuracy)}m), ignorando...`);
-        return;
-    }
-
-    const rawPos = {
-        lat: position.coords.latitude,
-        lng: position.coords.longitude,
-        accuracy: accuracy,
-        timestamp: now
-    };
-
-    // FILTRO 2: Adicionar ao histórico
-    positionHistory.push(rawPos);
-
-    // Manter apenas as últimas N posições
-    if (positionHistory.length > maxHistorySize) {
-        positionHistory.shift();
-    }
-
-    // FILTRO 3: Calcular posição suavizada (média ponderada por precisão)
-    const smoothedPos = calculateSmoothedPosition(positionHistory);
-
-    if (!userLocationMarker) return;
-
-    try {
-        // Usar animação Tween.js para transição 100% fluida
-        animateMarkerToPosition(smoothedPos, 600); // 600ms de duração (mais rápido)
-
-        // Atualiza precisão
-        locationAccuracy = accuracy;
-        updateStatus(`Precisão: ${Math.round(accuracy)}m`, true);
-
-        console.log(`📍 GPS atualizado: ${accuracy.toFixed(1)}m de precisão`);
-    } catch (error) {
-        console.error('Erro ao atualizar posição do marcador:', error);
-    }
-}
-
-// Função para calcular posição suavizada (média ponderada por precisão)
-function calculateSmoothedPosition(history) {
-    if (history.length === 0) return null;
-    if (history.length === 1) return { lat: history[0].lat, lng: history[0].lng };
-
-    let totalWeight = 0;
-    let weightedLat = 0;
-    let weightedLng = 0;
-
-    // Usar precisão como peso (quanto menor a accuracy, maior o peso)
-    history.forEach(pos => {
-        // Inverter accuracy para que posições mais precisas tenham maior peso
-        const weight = 1 / (pos.accuracy + 1); // +1 para evitar divisão por zero
-
-        weightedLat += pos.lat * weight;
-        weightedLng += pos.lng * weight;
-        totalWeight += weight;
-    });
-
-    return {
-        lat: weightedLat / totalWeight,
-        lng: weightedLng / totalWeight
-    };
-}
+// ===========================
+// FUNÇÕES GPS ANTIGAS REMOVIDAS
+// Agora todas dentro da classe GPSTracker
+// ===========================
 
 function handleGeoError(error, isInitial = false) {
     console.warn("Erro de geolocalização:", error);
