--- a/index.html
+++ b/index.html
@@ -3212,21 +3212,15 @@ async function addDeliveryMarkers() {
                         currentInfoWindow.close();
                     }
 
-                    // Salvar orientação atual ANTES de qualquer ação
+                    // ✅ SOLUÇÃO DEFINITIVA: Desabilitar rotação temporariamente
                     const savedHeading = map.getHeading() || 0;
                     const savedTilt = map.getTilt() || 0;
 
-                    // Criar listeners temporários para TRAVAR rotação durante pan
-                    const headingListener = map.addListener('heading_changed', () => {
-                        if (map.getHeading() !== savedHeading) {
-                            map.setHeading(savedHeading);
-                        }
-                    });
-
-                    const tiltListener = map.addListener('tilt_changed', () => {
-                        if (map.getTilt() !== savedTilt) {
-                            map.setTilt(savedTilt);
-                        }
+                    // Desabilitar controles de rotação
+                    map.setOptions({
+                        rotateControl: false,
+                        tilt: 0,
+                        heading: savedHeading
                     });
 
                     // Centralizar suavemente no marcador
@@ -3236,11 +3230,14 @@ async function addDeliveryMarkers() {
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
 
-                    // Remover listeners após 500ms (tempo suficiente para completar o pan)
+                    // Reabilitar rotação após 600ms
                     setTimeout(() => {
-                        google.maps.event.removeListener(headingListener);
-                        google.maps.event.removeListener(tiltListener);
-                    }, 500);
+                        map.setOptions({
+                            rotateControl: true,
+                            tilt: savedTilt,
+                            heading: savedHeading
+                        });
+                    }, 600);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
@@ -3265,21 +3262,15 @@ async function addDeliveryMarkers() {
                         currentInfoWindow.close();
                     }
 
-                    // Salvar orientação atual ANTES de qualquer ação
+                    // ✅ SOLUÇÃO DEFINITIVA: Desabilitar rotação temporariamente
                     const savedHeading = map.getHeading() || 0;
                     const savedTilt = map.getTilt() || 0;
 
-                    // Criar listeners temporários para TRAVAR rotação durante pan
-                    const headingListener = map.addListener('heading_changed', () => {
-                        if (map.getHeading() !== savedHeading) {
-                            map.setHeading(savedHeading);
-                        }
-                    });
-
-                    const tiltListener = map.addListener('tilt_changed', () => {
-                        if (map.getTilt() !== savedTilt) {
-                            map.setTilt(savedTilt);
-                        }
+                    // Desabilitar controles de rotação
+                    map.setOptions({
+                        rotateControl: false,
+                        tilt: 0,
+                        heading: savedHeading
                     });
 
                     // Centralizar suavemente no marcador
@@ -3289,11 +3280,14 @@ async function addDeliveryMarkers() {
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
 
-                    // Remover listeners após 500ms (tempo suficiente para completar o pan)
+                    // Reabilitar rotação após 600ms
                     setTimeout(() => {
-                        google.maps.event.removeListener(headingListener);
-                        google.maps.event.removeListener(tiltListener);
-                    }, 500);
+                        map.setOptions({
+                            rotateControl: true,
+                            tilt: savedTilt,
+                            heading: savedHeading
+                        });
+                    }, 600);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
@@ -6464,31 +6458,28 @@ async function showMatchedClientMarkers() {
                         infoWindow.open(map, marker);
                         currentInfoWindow = infoWindow;
 
-                        // Centralizar SEM rotação - salvar e restaurar orientação
+                        // ✅ SOLUÇÃO DEFINITIVA: Desabilitar rotação temporariamente
                         const savedHeading = map.getHeading() || 0;
                         const savedTilt = map.getTilt() || 0;
 
-                        // Criar listeners temporários para travar rotação
-                        const headingListener = map.addListener('heading_changed', () => {
-                            if (map.getHeading() !== savedHeading) {
-                                map.setHeading(savedHeading);
-                            }
-                        });
-
-                        const tiltListener = map.addListener('tilt_changed', () => {
-                            if (map.getTilt() !== savedTilt) {
-                                map.setTilt(savedTilt);
-                            }
+                        // Desabilitar controles de rotação
+                        map.setOptions({
+                            rotateControl: false,
+                            tilt: 0,
+                            heading: savedHeading
                         });
 
                         // Centralizar
                         map.panTo(position);
 
-                        // Remover listeners após animação
+                        // Reabilitar rotação após 600ms
                         setTimeout(() => {
-                            google.maps.event.removeListener(headingListener);
-                            google.maps.event.removeListener(tiltListener);
-                        }, 500);
+                            map.setOptions({
+                                rotateControl: true,
+                                tilt: savedTilt,
+                                heading: savedHeading
+                            });
+                        }, 600);
                     });
 
                     matchedClientMarkers[client.id] = marker;
@@ -6515,31 +6506,28 @@ async function showMatchedClientMarkers() {
                         infoWindow.open(map, marker);
                         currentInfoWindow = infoWindow;
 
-                        // Centralizar SEM rotação - salvar e restaurar orientação
+                        // ✅ SOLUÇÃO DEFINITIVA: Desabilitar rotação temporariamente
                         const savedHeading = map.getHeading() || 0;
                         const savedTilt = map.getTilt() || 0;
 
-                        // Criar listeners temporários para travar rotação
-                        const headingListener = map.addListener('heading_changed', () => {
-                            if (map.getHeading() !== savedHeading) {
-                                map.setHeading(savedHeading);
-                            }
-                        });
-
-                        const tiltListener = map.addListener('tilt_changed', () => {
-                            if (map.getTilt() !== savedTilt) {
-                                map.setTilt(savedTilt);
-                            }
+                        // Desabilitar controles de rotação
+                        map.setOptions({
+                            rotateControl: false,
+                            tilt: 0,
+                            heading: savedHeading
                         });
 
                         // Centralizar
                         map.panTo(position);
 
-                        // Remover listeners após animação
+                        // Reabilitar rotação após 600ms
                         setTimeout(() => {
-                            google.maps.event.removeListener(headingListener);
-                            google.maps.event.removeListener(tiltListener);
-                        }, 500);
+                            map.setOptions({
+                                rotateControl: true,
+                                tilt: savedTilt,
+                                heading: savedHeading
+                            });
+                        }, 600);
                     });
 
                     matchedClientMarkers[client.id] = marker;
